--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="stylesheet" href="cropper.css">
+    <link rel="icon" href="favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico">
     <script src="cropper.js"></script>
   </head>
   <body>
